--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,10 @@
       <%= link_to "View all users", users_path, class: "button" %>
       <div class="float-right">
         <% if @login_user %>
-          <%= link_to "Logged in as #{@login_user.username}", user_path(@login_user), class: "button" %>
-          <%#= link_to "Log Out", logout_path, method: :post, class: "button" %>
+          <%#= link_to "Logged in as #{@login_user.name}", user_path(@login_user), class: "button" %>
+          <%= link_to "Log Out", logout_path, method: :post, class: "button" %>
         <% else %>
-          <%= link_to "Log In", "/auth/github/callback", class: "button float-right" %>
+          <%= link_to "Log In", "/auth/github", class: "button float-right" %>
         <% end %>
       </div>
     </nav>
